add: batch import endpoint add: storing hash values instead of tokens
